--- a/forms.html
+++ b/forms.html
@@ -1,156 +1,80 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Madrasa — Forms & Applications</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Admission Form | Noorussalam Madrasa</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <style>
-    :root{--accent:#0b5ed7}
-    body{font-family:system-ui,-apple-system,Segoe UI,Roboto,'Helvetica Neue',Arial}
-    .hero{background:linear-gradient(180deg,rgba(11,94,215,0.06),transparent);padding:2.5rem}
-    .card{border-radius:1rem}
-    .required::after{content:' *';color:#d00}
-    .form-section{margin-bottom:2rem}
-    .note{font-size:.9rem;color:#555}
-    @media (min-width:992px){.two-col{display:grid;grid-template-columns:1fr 420px;gap:2rem}}
+    body { background: #f8f9fa; }
+    .container { max-width: 700px; margin-top: 50px; }
+    h2 { text-align: center; color: #0b5ed7; margin-bottom: 30px; }
+    .btn-primary { background-color: #0b5ed7; }
   </style>
 </head>
 <body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-white shadow-sm">
   <div class="container">
-    <a class="navbar-brand fw-bold" href="#">Noorussalam Madrasa</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#nav" aria-controls="nav" aria-expanded="false">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="nav">
-      <ul class="navbar-nav ms-auto">
-        <li class="nav-item"><a class="nav-link" href="#home">Home</a></li>
-        <li class="nav-item"><a class="nav-link active" href="#admission">Admission</a></li>
-        <li class="nav-item"><a class="nav-link" href="#contact">Contact</a></li>
-      </ul>
-    </div>
-  </div>
-</nav>
-
-<header class="hero">
-  <div class="container">
-    <div class="row align-items-center">
-      <div class="col-lg-8">
-        <h1 class="display-6">Forms & Applications</h1>
-        <p class="lead">Apply for admission, request certificates, submit permission letters and more — all online.</p>
-        <p class="note">Fields marked with <span class="text-danger">*</span> are required.</p>
+    <h2>Admission Application Form</h2>
+    <form id="admissionForm" class="p-4 bg-white shadow rounded">
+      <div class="mb-3">
+        <label class="form-label">Full Name</label>
+        <input type="text" name="FullName" class="form-control" required>
       </div>
-    </div>
-  </div>
-</header>
-
-<main class="container my-5" id="forms">
-  <div class="two-col">
-
-    <div>
-      <!-- Admission Application -->
-      <section class="card p-4 mb-4 form-section" id="admission">
-        <h3 class="mb-3">Admission Application</h3>
-        <p class="note">Fill all required fields. After submission, you'll receive a confirmation message.</p>
-        <form id="admissionForm" novalidate>
-          <div class="row g-3">
-            <div class="col-md-6">
-              <label class="form-label required">Full Name</label>
-              <input type="text" class="form-control" name="FullName" required>
-              <div class="invalid-feedback">Please enter student's full name.</div>
-            </div>
-            <div class="col-md-6">
-              <label class="form-label">Preferred Name</label>
-              <input type="text" class="form-control" name="PreferredName">
-            </div>
-            <div class="col-md-4">
-              <label class="form-label required">Date of Birth</label>
-              <input type="date" class="form-control" name="DOB" required>
-            </div>
-            <div class="col-md-4">
-              <label class="form-label required">Gender</label>
-              <select class="form-select" name="Gender" required>
-                <option value="">Choose...</option>
-                <option>Male</option>
-                <option>Female</option>
-              </select>
-            </div>
-            <div class="col-md-4">
-              <label class="form-label required">Applying For Class / Level</label>
-              <input type="text" class="form-control" name="ClassLevel" required placeholder="e.g., Primary / Hifz / Tajweed">
-            </div>
-            <div class="col-md-6">
-              <label class="form-label required">Parent / Guardian Name</label>
-              <input type="text" class="form-control" name="GuardianName" required>
-            </div>
-            <div class="col-md-6">
-              <label class="form-label required">Contact Number</label>
-              <input type="tel" class="form-control" name="Phone" required>
-            </div>
-            <div class="col-12">
-              <label class="form-label required">Address</label>
-              <textarea class="form-control" name="Address" rows="2" required></textarea>
-            </div>
-            <div class="col-12 d-flex gap-2">
-              <button type="submit" class="btn btn-primary">Submit Application</button>
-              <button type="reset" class="btn btn-outline-secondary">Reset</button>
-            </div>
-          </div>
-        </form>
-      </section>
-    </div>
-
-    <aside>
-      <div class="card p-4 sticky-top">
-        <h5>How it works</h5>
-        <ol>
-          <li>Fill the form and click <strong>Submit</strong>.</li>
-          <li>Your submission will be sent to our secure Google Sheet.</li>
-          <li>You will see a confirmation message after submission.</li>
-        </ol>
+      <div class="mb-3">
+        <label class="form-label">Preferred Name</label>
+        <input type="text" name="PreferredName" class="form-control">
       </div>
-    </aside>
-
+      <div class="mb-3">
+        <label class="form-label">Date of Birth</label>
+        <input type="date" name="DOB" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Gender</label>
+        <select name="Gender" class="form-select" required>
+          <option value="">Select</option>
+          <option>Male</option>
+          <option>Female</option>
+        </select>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Class/Level</label>
+        <input type="text" name="ClassLevel" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Guardian Name</label>
+        <input type="text" name="GuardianName" class="form-control">
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Phone Number</label>
+        <input type="tel" name="Phone" class="form-control" required>
+      </div>
+      <div class="mb-3">
+        <label class="form-label">Address</label>
+        <textarea name="Address" class="form-control" rows="3"></textarea>
+      </div>
+      <button type="submit" class="btn btn-primary w-100">Submit Application</button>
+    </form>
   </div>
-</main>
 
-<footer class="bg-white py-4 mt-5 border-top">
-  <div class="container text-center small text-muted">© <span id="year"></span> Noorussalam Madrasa — All rights reserved.</div>
-</footer>
+  <script>
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwcP3wvH29nz8k9W9z39Uk12M8OXhkYQdaavD44Ecz0tiLesx2IcWb9l3c4-PqfFwYj/exec'; // ✅ Your backend URL
+    const form = document.getElementById('admissionForm');
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
-<script>
-  document.getElementById('year').textContent = new Date().getFullYear();
+    form.addEventListener('submit', e => {
+      e.preventDefault();
+      const formData = new FormData(form);
 
-  const GOOGLE_SCRIPT_URL = 'https://script.google.com/macros/s/AKfycbwcP3wvH29nz8k9W9z39Uk12M8OXhkYQdaavD44Ecz0tiLesx2IcWb9l3c4-PqfFwYj/exec'; // Replace with your Web App URL
-
-  const admissionForm = document.getElementById('admissionForm');
-  admissionForm.addEventListener('submit', function(e){
-    e.preventDefault();
-    if(!admissionForm.checkValidity()){
-      admissionForm.classList.add('was-validated');
-      return;
-    }
-
-    const formData = new FormData(admissionForm);
-
-    fetch(GOOGLE_SCRIPT_URL, {
-      method: 'POST',
-      body: formData
-    })
-    .then(response => response.json())
-    .then(data => {
-      alert('Submission successful! Reference: ' + (data.row || 'N/A'));
-      admissionForm.reset();
-      admissionForm.classList.remove('was-validated');
-    })
-    .catch(error => {
-      console.error('Error!', error.message);
-      alert('Submission failed. Please try again.');
+      fetch(scriptURL, { method: 'POST', body: formData })
+        .then(response => response.json())
+        .then(result => {
+          alert('✅ Application submitted successfully!');
+          form.reset();
+        })
+        .catch(error => {
+          alert('❌ Submission failed. Please try again.');
+          console.error(error);
+        });
     });
-  });
-</script>
+  </script>
 </body>
 </html>
