--- a/idcard.html
+++ b/idcard.html
@@ -16,7 +16,6 @@
       justify-content: center;
       padding: 30px;
     }
-
     .id-form {
       background: #fff;
       border-radius: 15px;
@@ -28,19 +27,16 @@
       margin-bottom: 40px;
       animation: fadeIn 0.8s ease;
     }
-
     .id-form h2 {
       color: #0b5ed7;
       font-weight: 700;
       margin-bottom: 15px;
     }
-
     .id-form p {
       color: #6c757d;
       font-size: 14px;
       margin-bottom: 25px;
     }
-
     .id-form button {
       background: #0b5ed7;
       border: none;
@@ -51,91 +47,11 @@
       color: #fff;
       transition: all 0.3s ease;
     }
-
     .id-form button:hover {
       background: #0849a2;
     }
-
-    .id-card {
-      width: 350px;
-      background: #ffffff;
-      border-radius: 20px;
-      box-shadow: 0 8px 20px rgba(0,0,0,0.3);
-      overflow: hidden;
-      text-align: center;
-      animation: fadeInUp 1s ease;
-      position: relative;
-    }
-
-    .id-header {
-      background: linear-gradient(90deg, #0b5ed7, #74b9ff);
-      color: white;
-      padding: 15px;
-    }
-
-    .id-header h5 {
-      margin: 0;
-      font-size: 20px;
-      font-weight: 700;
-    }
-
-    .id-header p {
-      margin: 0;
-      font-size: 13px;
-      opacity: 0.9;
-    }
-
-    .id-body {
-      padding: 20px;
-    }
-
-    .id-photo {
-      width: 100px;
-      height: 100px;
-      border-radius: 50%;
-      object-fit: cover;
-      margin-top: -50px;
-      border: 4px solid white;
-      box-shadow: 0 0 10px rgba(0,0,0,0.3);
-    }
-
-    .id-body h5 {
-      color: #0b5ed7;
-      margin-top: 10px;
-      font-weight: 700;
-    }
-
-    .id-body p {
-      margin: 3px 0;
-      color: #333;
-      font-size: 14px;
-    }
-
-    .qr-code {
-      margin-top: 10px;
-    }
-
-    .print-btn {
-      margin-top: 15px;
-      background: #198754;
-      color: white;
-      border: none;
-      padding: 10px 25px;
-      border-radius: 8px;
-      font-weight: 600;
-    }
-
-    .print-btn:hover {
-      background: #146c43;
-    }
-
     @keyframes fadeIn {
       from { opacity: 0; transform: translateY(-10px); }
-      to { opacity: 1; transform: translateY(0); }
-    }
-
-    @keyframes fadeInUp {
-      from { opacity: 0; transform: translateY(20px); }
       to { opacity: 1; transform: translateY(0); }
     }
   </style>
@@ -160,11 +76,8 @@
     </form>
   </div>
 
-  <!-- Result -->
-  <div id="result" class="text-center"></div>
-
   <script>
-    const scriptURL = 'https://script.google.com/macros/s/AKfycbzk7u3PksrhDJStHaPTdp1J4vyO79cEwuVfcgkoocMYXOxn4Ug79_y6nQu-AT9eQFFy/exec'; // ✅ Your Script URL
+    const scriptURL = 'https://script.google.com/macros/s/AKfycbwcP3wvH29nz8k9W9z39Uk12M8OXhkYQdaavD44Ecz0tiLesx2IcWb9l3c4-PqfFwYj/exec'; // ✅ Your Script URL
 
     document.getElementById('idForm').addEventListener('submit', e => {
       e.preventDefault();
@@ -174,7 +87,9 @@
 
       const url = `${scriptURL}?class=${encodeURIComponent(classVal)}&roll=${encodeURIComponent(rollVal)}`;
 
-      document.getElementById('result').innerHTML = `<div class="text-white mt-3">Loading...</div>`;
+      // Open new window
+      const newWin = window.open("", "_blank");
+      newWin.document.write("<h3 style='text-align:center;font-family:Poppins;color:#0b5ed7;'>Loading ID Card...</h3>");
 
       fetch(url)
         .then(res => res.json())
@@ -184,33 +99,105 @@
             const qrData = `UID: ${s.UID}, Admission: ${s.AdmissionNumber}, Name: ${s.FullName}, Class: ${s.ClassLevel}, Roll: ${s.RollNumber}`;
             const qrURL = `https://api.qrserver.com/v1/create-qr-code/?data=${encodeURIComponent(qrData)}&size=100x100`;
 
-            document.getElementById('result').innerHTML = `
-              <div class="id-card">
-                <div class="id-header">
-                  <h5>Noorussalam Madrasa</h5>
-                  <p>Student Identity Card</p>
-                </div>
-                <div class="id-body">
-                  <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" alt="Student Photo" class="id-photo">
-                  <h5>${s.FullName}</h5>
-                  <p><strong>UID:</strong> ${s.UID}</p>
-                  <p><strong>Admission No:</strong> ${s.AdmissionNumber}</p>
-                  <p><strong>Father’s Name:</strong> ${s.FatherName}</p>
-                  <p><strong>Class:</strong> ${s.ClassLevel}</p>
-                  <p><strong>Roll No:</strong> ${s.RollNumber}</p>
-                  <p><strong>Phone:</strong> ${s.Phone}</p>
-                  <div class="qr-code">
-                    <img src="${qrURL}" alt="QR Code">
+            const html = `
+              <html>
+              <head>
+                <title>${s.FullName} | ID Card</title>
+                <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+                <style>
+                  body {
+                    background: #f0f4ff;
+                    font-family: 'Poppins', sans-serif;
+                    display: flex;
+                    align-items: center;
+                    justify-content: center;
+                    height: 100vh;
+                  }
+                  .id-card {
+                    width: 380px;
+                    background: white;
+                    border-radius: 20px;
+                    box-shadow: 0 8px 25px rgba(0,0,0,0.2);
+                    overflow: hidden;
+                    text-align: center;
+                    border: 5px solid #0b5ed7;
+                  }
+                  .id-header {
+                    background: linear-gradient(90deg, #0b5ed7, #74b9ff);
+                    color: white;
+                    padding: 12px;
+                  }
+                  .id-header h5 {
+                    margin: 0;
+                    font-size: 18px;
+                    font-weight: 700;
+                    line-height: 1.3;
+                  }
+                  .id-header small {
+                    font-size: 12px;
+                    display: block;
+                    opacity: 0.9;
+                  }
+                  .id-body {
+                    padding: 20px;
+                  }
+                  .id-photo {
+                    width: 100px;
+                    height: 100px;
+                    border-radius: 50%;
+                    object-fit: cover;
+                    margin-top: -50px;
+                    border: 4px solid white;
+                    box-shadow: 0 0 10px rgba(0,0,0,0.3);
+                  }
+                  .id-body h5 { color: #0b5ed7; margin-top: 10px; font-weight: 700; }
+                  .id-body p { margin: 3px 0; color: #333; font-size: 14px; }
+                  .qr-code { margin-top: 10px; }
+                  .print-btn {
+                    margin-top: 15px;
+                    background: #198754;
+                    color: white;
+                    border: none;
+                    padding: 10px 25px;
+                    border-radius: 8px;
+                    font-weight: 600;
+                  }
+                  .print-btn:hover { background: #146c43; }
+                </style>
+              </head>
+              <body>
+                <div class="id-card">
+                  <div class="id-header">
+                    <h5>NOORUSSALAM SECONDARY MADRASA</h5>
+                    <small>Kambippalam Kerala Estate, Malappuram Dt.<br>Email: noorussalam6110@gmail.com</small>
                   </div>
-                  <button class="print-btn" onclick="window.print()">🖨️ Print ID Card</button>
+                  <div class="id-body">
+                    <img src="${s.PhotoURL || 'https://via.placeholder.com/100'}" alt="Student Photo" class="id-photo">
+                    <h5>${s.FullName}</h5>
+                    <p><strong>UID:</strong> ${s.UID}</p>
+                    <p><strong>Admission No:</strong> ${s.AdmissionNumber}</p>
+                    <p><strong>Father’s Name:</strong> ${s.FatherName}</p>
+                    <p><strong>Class:</strong> ${s.ClassLevel}</p>
+                    <p><strong>Roll No:</strong> ${s.RollNumber}</p>
+                    <p><strong>Phone:</strong> ${s.Phone}</p>
+                    <div class="qr-code">
+                      <img src="${qrURL}" alt="QR Code">
+                    </div>
+                    <button class="print-btn" onclick="window.print()">🖨️ Print ID Card</button>
+                  </div>
                 </div>
-              </div>`;
+              </body>
+              </html>
+            `;
+            newWin.document.open();
+            newWin.document.write(html);
+            newWin.document.close();
           } else {
-            document.getElementById('result').innerHTML = `<div class="alert alert-danger mt-3">${data.message}</div>`;
+            newWin.document.write(`<h3 style='color:red;text-align:center;'>${data.message}</h3>`);
           }
         })
         .catch(() => {
-          document.getElementById('result').innerHTML = `<div class="alert alert-danger mt-3">Error fetching data.</div>`;
+          newWin.document.write("<h3 style='color:red;text-align:center;'>Error fetching data.</h3>");
         });
     });
   </script>
