--- a/contact.html
+++ b/contact.html
@@ -1,94 +1,151 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us - Madrasa Noo</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link rel="stylesheet" href="style.css">
+  <title>Contact Us | Noorussalam Secondary Madrasa</title>
+
+  <!-- Font Awesome for social icons -->
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+  <style>
+    body {
+      font-family: 'Arial', sans-serif;
+      background: #fafafa;
+      margin: 0;
+      padding: 0;
+    }
+
+    /* 🔹 Top Navigation Menu */
+    .menu {
+      background: linear-gradient(45deg, #ff006a, #ff8a00);
+      padding: 12px;
+      text-align: right;
+    }
+
+    .menu a {
+      color: #fff;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+      transition: 0.3s;
+    }
+
+    .menu a:hover {
+      opacity: 0.8;
+    }
+
+    /* 🔹 Contact Box */
+    .contact-container {
+      max-width: 400px;
+      background: #ffffff;
+      margin: 60px auto;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 4px 14px rgba(0,0,0,0.08);
+      position: relative;
+    }
+
+    /* 🔹 Social Icons */
+    .social-icons {
+      position: absolute;
+      top: -45px;
+      left: 10px;
+      display: flex;
+      gap: 12px;
+    }
+
+    .social-icons a {
+      text-decoration: none;
+      font-size: 20px;
+      color: #fff;
+      background: linear-gradient(45deg, #ff006a, #ff8a00);
+      width: 34px;
+      height: 34px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      border-radius: 50%;
+      transition: 0.3s;
+    }
+
+    .social-icons a:hover {
+      transform: scale(1.1);
+    }
+
+    /* 🔹 Form Elements */
+    h2 {
+      text-align: center;
+      color: #333;
+      font-weight: 600;
+      margin-top: 10px;
+    }
+
+    .input-field {
+      width: 100%;
+      padding: 12px;
+      margin-bottom: 14px;
+      border: 1px solid #dbdbdb;
+      border-radius: 8px;
+      background: #fafafa;
+      outline: none;
+      transition: 0.3s;
+    }
+
+    .input-field:focus {
+      border-color: #b3b3b3;
+      background: #fff;
+    }
+
+    #send-btn {
+      width: 100%;
+      padding: 12px;
+      border: none;
+      background: linear-gradient(45deg, #ff006a, #ff8a00);
+      color: white;
+      border-radius: 8px;
+      font-size: 16px;
+      cursor: pointer;
+      transition: 0.3s;
+    }
+
+    #send-btn:hover {
+      opacity: 0.9;
+    }
+  </style>
 </head>
 <body>
 
-  <!-- HEADER -->
-  <header class="bg-primary text-white text-center py-4 shadow-sm">
-    <h2 class="mb-0">Contact Us</h2>
-    <p class="mb-0">Get in touch with Noorussalam Madrasa
-</p>
-  </header>
+  <!-- 🔸 Navigation Menu -->
+  <div class="menu">
+    <a href="#">Home</a>
+    <a href="#about">About</a>
+    <a href="#gallery">Gallery</a>
+    <a href="#contact">Contact Us</a>
+  </div>
 
-  <!-- CONTACT SECTION -->
-  <section id="contact" class="py-5 bg-light">
-    <div class="container">
-      <div class="row g-4">
+  <!-- 🔸 Contact Section -->
+  <div class="contact-container" id="contact">
 
-        <!-- Contact Details -->
-        <div class="col-md-6">
-          <h4>Contact Information</h4>
-          <p class="text-muted">Prefer phone? Call: <strong>+91 70346 78818
-</strong></p>
-          <ul class="list-unstyled small text-muted">
-            <li><i class="fa-solid fa-map-marker-alt"></i> Kambippalam-Kerala Estate
-</li>
-            <li><i class="fa-solid fa-envelope"></i> noorussalam6110@gmail.com
-</li>
-          </ul>
-          <div class="mt-3">
-            <a class="btn btn-outline-primary me-2" href="#"><i class="fa-brands fa-facebook-f"></i></a>
-            <a class="btn btn-outline-danger me-2" href="#"><i class="fa-brands fa-instagram"></i></a>
-          </div>
-        </div>
-
-        <!-- Contact Form -->
-        <div class="col-md-6">
-          <h5>Send a Message</h5>
-          <form id="contactForm" onsubmit="return submitContact(event)">
-            <div class="mb-2"><input class="form-control" id="cname" placeholder="Your Name" required></div>
-            <div class="mb-2"><input class="form-control" id="cemail" type="email" placeholder="Email" required></div>
-            <div class="mb-2"><textarea class="form-control" id="cmsg" rows="4" placeholder="Message" required></textarea></div>
-            <button class="btn btn-primary">Send</button>
-          </form>
-          <div id="contactAlert" class="mt-3" style="display:none"></div>
-        </div>
-
-      </div>
-
-      <!-- Back to Home -->
-      <div class="text-center mt-5">
-        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
-      </div>
+    <!-- 🔹 Social Icons -->
+    <div class="social-icons">
+      <a href="https://instagram.com/noorussalamofficial" target="_blank"><i class="fab fa-instagram"></i></a>
+      <a href="https://wa.me/917034678818" target="_blank"><i class="fab fa-whatsapp"></i></a>
+      <a href="https://facebook.com/noorussalamofficial" target="_blank"><i class="fab fa-facebook-f"></i></a>
+      <a href="https://x.com/noorussalamofficial" target="_blank"><i class="fab fa-x-twitter"></i></a>
+      <a href="https://t.me/noorussalamofficial" target="_blank"><i class="fab fa-telegram-plane"></i></a>
     </div>
-  </section>
 
-  <!-- FOOTER -->
-  <footer class="bg-dark text-white text-center py-3 mt-4">
-    <small>© 2025 All rights reserved. |Noorussalam Madrasa</small>
-  </footer>
+    <h2>Contact Us</h2>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-  <script>
-    function submitContact(e){
-      e.preventDefault();
-      const name = document.getElementById('cname').value.trim();
-      const email = document.getElementById('cemail').value.trim();
-      const msg = document.getElementById('cmsg').value.trim();
-      if(!name || !email || !msg){
-        showAlert('contactAlert','Please complete all fields.','danger');
-        return false;
-      }
-      showAlert('contactAlert','Message sent. Thank you, '+name+'!','success');
-      e.target.reset();
-      return false;
-    }
+    <!-- 🔹 Contact Form -->
+    <form action="mailto:noorussalamofficial@gmail.com" method="post" enctype="text/plain">
+      <input type="text" name="name" class="input-field" placeholder="Your Name" required>
+      <input type="email" name="email" class="input-field" placeholder="Your Email" required>
+      <textarea name="message" class="input-field" placeholder="Message" rows="4" required></textarea>
+      <button id="send-btn" type="submit">Send Message</button>
+    </form>
+  </div>
 
-    function showAlert(id,msg,type){
-      const el = document.getElementById(id);
-      el.style.display = 'block';
-      el.className = '';
-      el.classList.add('alert');
-      el.classList.add('alert-'+(type==='success'?'success':'danger'));
-      el.textContent = msg;
-      setTimeout(()=>{ el.style.display='none'; },5000);
-    }
-  </script>
 </body>
 </html>
