--- a/contact.html
+++ b/contact.html
@@ -1,151 +1,187 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Contact Us | Noorussalam Secondary Madrasa</title>
+  <title>Contact Us - Noorussalam Madrasa</title>
 
-  <!-- Font Awesome for social icons -->
-  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <!-- Bootstrap -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 
   <style>
     body {
-      font-family: 'Arial', sans-serif;
-      background: #fafafa;
-      margin: 0;
-      padding: 0;
-    }
-
-    /* 🔹 Top Navigation Menu */
-    .menu {
-      background: linear-gradient(45deg, #ff006a, #ff8a00);
-      padding: 12px;
-      text-align: right;
-    }
-
-    .menu a {
+      background-color: #0b1a3b;
       color: #fff;
-      text-decoration: none;
-      margin: 0 15px;
-      font-weight: bold;
+      font-family: 'Poppins', sans-serif;
+    }
+
+    header {
+      background: linear-gradient(135deg, #002B5B, #004AAD);
+      box-shadow: 0 2px 8px rgba(0,0,0,0.3);
+    }
+
+    #contact {
+      background: linear-gradient(180deg, #0b1a3b 0%, #001A33 100%);
+      border-top: 3px solid #0056b3;
+    }
+
+    h2, h4, h5 {
+      color: #FFD700;
+    }
+
+    .form-control {
+      background-color: rgba(255,255,255,0.1);
+      border: 1px solid #555;
+      color: #fff;
       transition: 0.3s;
     }
 
-    .menu a:hover {
-      opacity: 0.8;
+    .form-control:focus {
+      background-color: rgba(255,255,255,0.15);
+      border-color: #FFD700;
+      box-shadow: 0 0 10px #FFD70050;
     }
 
-    /* 🔹 Contact Box */
-    .contact-container {
-      max-width: 400px;
-      background: #ffffff;
-      margin: 60px auto;
-      padding: 25px;
-      border-radius: 12px;
-      box-shadow: 0 4px 14px rgba(0,0,0,0.08);
-      position: relative;
+    .btn-primary {
+      background-color: #004AAD;
+      border: none;
+      transition: 0.3s;
     }
 
-    /* 🔹 Social Icons */
-    .social-icons {
-      position: absolute;
-      top: -45px;
-      left: 10px;
-      display: flex;
-      gap: 12px;
+    .btn-primary:hover {
+      background-color: #005ce6;
+      transform: translateY(-2px);
     }
 
-    .social-icons a {
-      text-decoration: none;
-      font-size: 20px;
-      color: #fff;
-      background: linear-gradient(45deg, #ff006a, #ff8a00);
-      width: 34px;
-      height: 34px;
-      display: flex;
+    .btn-outline-primary {
+      color: #FFD700;
+      border-color: #FFD700;
+    }
+
+    .btn-outline-primary:hover {
+      background-color: #FFD700;
+      color: #0b1a3b;
+    }
+
+    .social-btn .btn {
+      border-radius: 50%;
+      width: 40px;
+      height: 40px;
+      display: inline-flex;
       align-items: center;
       justify-content: center;
-      border-radius: 50%;
+      font-size: 18px;
+      color: #FFD700;
+      border: 1px solid #FFD700;
       transition: 0.3s;
     }
 
-    .social-icons a:hover {
-      transform: scale(1.1);
+    .social-btn .btn:hover {
+      background-color: #FFD700;
+      color: #0b1a3b;
     }
 
-    /* 🔹 Form Elements */
-    h2 {
-      text-align: center;
-      color: #333;
-      font-weight: 600;
-      margin-top: 10px;
+    footer {
+      background-color: #001A33;
+      color: #ccc;
+      font-size: 14px;
     }
 
-    .input-field {
-      width: 100%;
-      padding: 12px;
-      margin-bottom: 14px;
-      border: 1px solid #dbdbdb;
-      border-radius: 8px;
-      background: #fafafa;
-      outline: none;
-      transition: 0.3s;
+    .alert-success {
+      background-color: #003366;
+      color: #00ff99;
+      border: 1px solid #00ff99;
     }
 
-    .input-field:focus {
-      border-color: #b3b3b3;
-      background: #fff;
-    }
-
-    #send-btn {
-      width: 100%;
-      padding: 12px;
-      border: none;
-      background: linear-gradient(45deg, #ff006a, #ff8a00);
-      color: white;
-      border-radius: 8px;
-      font-size: 16px;
-      cursor: pointer;
-      transition: 0.3s;
-    }
-
-    #send-btn:hover {
-      opacity: 0.9;
+    .alert-danger {
+      background-color: #330000;
+      color: #ff6666;
+      border: 1px solid #ff6666;
     }
   </style>
 </head>
 <body>
 
-  <!-- 🔸 Navigation Menu -->
-  <div class="menu">
-    <a href="#">Home</a>
-    <a href="#about">About</a>
-    <a href="#gallery">Gallery</a>
-    <a href="#contact">Contact Us</a>
-  </div>
+  <!-- HEADER -->
+  <header class="text-white text-center py-4 shadow-sm">
+    <h2 class="mb-1">Contact Us</h2>
+    <p class="mb-0 text-light">Get in touch with Noorussalam Madrasa</p>
+  </header>
 
-  <!-- 🔸 Contact Section -->
-  <div class="contact-container" id="contact">
+  <!-- CONTACT SECTION -->
+  <section id="contact" class="py-5">
+    <div class="container">
+      <div class="row g-4 align-items-center">
 
-    <!-- 🔹 Social Icons -->
-    <div class="social-icons">
-      <a href="https://instagram.com/noorussalamofficial" target="_blank"><i class="fab fa-instagram"></i></a>
-      <a href="https://wa.me/917034678818" target="_blank"><i class="fab fa-whatsapp"></i></a>
-      <a href="https://facebook.com/noorussalamofficial" target="_blank"><i class="fab fa-facebook-f"></i></a>
-      <a href="https://x.com/noorussalamofficial" target="_blank"><i class="fab fa-x-twitter"></i></a>
-      <a href="https://t.me/noorussalamofficial" target="_blank"><i class="fab fa-telegram-plane"></i></a>
+        <!-- Contact Details -->
+        <div class="col-md-6">
+          <h4>Contact Information</h4>
+          <p class="text-light small">Prefer phone? Call: <strong>+91 70346 78818</strong></p>
+          <ul class="list-unstyled small text-light">
+            <li><i class="fa-solid fa-location-dot text-warning me-2"></i> Kambippalam - Kerala Estate</li>
+            <li><i class="fa-solid fa-envelope text-warning me-2"></i> noorussalam6110@gmail.com</li>
+          </ul>
+          <div class="mt-4 social-btn">
+            <a class="btn me-2" href="#"><i class="fa-brands fa-facebook-f"></i></a>
+            <a class="btn me-2" href="#"><i class="fa-brands fa-instagram"></i></a>
+          </div>
+        </div>
+
+        <!-- Contact Form -->
+        <div class="col-md-6">
+          <h5 class="text-warning mb-3">Send a Message</h5>
+          <form id="contactForm" onsubmit="return submitContact(event)">
+            <div class="mb-3"><input class="form-control" id="cname" placeholder="Your Name" required></div>
+            <div class="mb-3"><input class="form-control" id="cemail" type="email" placeholder="Email" required></div>
+            <div class="mb-3"><textarea class="form-control" id="cmsg" rows="4" placeholder="Message" required></textarea></div>
+            <button class="btn btn-primary w-100">Send Message</button>
+          </form>
+          <div id="contactAlert" class="mt-3" style="display:none"></div>
+        </div>
+
+      </div>
+
+      <!-- Back to Home -->
+      <div class="text-center mt-5">
+        <a href="index.html" class="btn btn-outline-primary px-4">← Back to Home</a>
+      </div>
     </div>
+  </section>
 
-    <h2>Contact Us</h2>
+  <!-- FOOTER -->
+  <footer class="text-center py-3 mt-4">
+    <small>© 2025 All rights reserved | Noorussalam Madrasa</small>
+  </footer>
 
-    <!-- 🔹 Contact Form -->
-    <form action="mailto:noorussalamofficial@gmail.com" method="post" enctype="text/plain">
-      <input type="text" name="name" class="input-field" placeholder="Your Name" required>
-      <input type="email" name="email" class="input-field" placeholder="Your Email" required>
-      <textarea name="message" class="input-field" placeholder="Message" rows="4" required></textarea>
-      <button id="send-btn" type="submit">Send Message</button>
-    </form>
-  </div>
+  <!-- Scripts -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+  <script>
+    function submitContact(e){
+      e.preventDefault();
+      const name = document.getElementById('cname').value.trim();
+      const email = document.getElementById('cemail').value.trim();
+      const msg = document.getElementById('cmsg').value.trim();
+      if(!name || !email || !msg){
+        showAlert('contactAlert','Please complete all fields.','danger');
+        return false;
+      }
+      showAlert('contactAlert','Message sent successfully. Thank you, '+name+'!','success');
+      e.target.reset();
+      return false;
+    }
 
+    function showAlert(id,msg,type){
+      const el = document.getElementById(id);
+      el.style.display = 'block';
+      el.className = '';
+      el.classList.add('alert','mt-3');
+      el.classList.add('alert-'+(type==='success'?'success':'danger'));
+      el.textContent = msg;
+      setTimeout(()=>{ el.style.display='none'; },5000);
+    }
+  </script>
 </body>
 </html>
